[package]
name = "island_map_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
generator = {path = "./generator"}
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window",
]
