[package]
name = "island_map_generator"
version = "0.1.0"
edition = "2021"
description = "This project is about island map procedural generation using Web Assembly (yew framework)"
license = "GPL-3.0-or-later"

[dependencies]
yew = "0.19.3"
generator = {path = "./generator"}
wasm-bindgen = "0.2"
log = "0.4.14"
console_log = { version = "0.2", features = ["color"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window",
]
