[package]
name = "island_map_generator_algo"
version = "0.1.0"
edition = "2021"
description = "Generation crate for an island map editor using procedural generation, Rust and Bevy engine"
license = "GPL-3.0-or-later"
keywords = ["terrain", "procedural", "generation", "bevy"]
categories = ["games", "game-development"]
readme = "README.md"
repository = "https://github.com/danieldidiobalsamo/island_map_generator"

[dependencies]
noise = "0.8.2"