[package]
name = "island_map_generator_bevy"
version = "0.1.0"
edition = "2021"
description = "This project is about island map procedural generation using Web Assembly (yew framework)"
license = "GPL-3.0-or-later"

[dependencies]
bevy = "0.12.0"
bevy_egui = "0.23.0"
island_map_generator_algo = {path = "../island_map_generator_algo"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for game's code:
[profile.dev.package."*"]
opt-level = 3